# KIBO

./: .gitignore  .graphify_ast.json  .graphify_detect.json  .graphify_uncached.txt  CONTRIBUTING.md  Dependency_Graph.md  KIBO.bat  README.md  ai_client.py  animation_engine.py  brain.py  calendar_manager.py  chat_window.py  check_incremental.py  config.example.json  config.json  config_manager.py  hotkey_listener.py  kibo-design-system-2.html  kibo-design-system-2.html.artifact.json  kibo-design-system.html  kibo-design-system.html.artifact.json  main.py  memory_store.py  notification_router.py  proactive_engine.py  pyproject.toml  requirements.txt  run_ast.py  settings_window.py  system_monitor.py  task_runner.py  tray_manager.py  tts_manager.py  ui_manager.py  voice_listener.py
.obsidian/: graph.json  workspace.json
Code_Graph/: ai_client.md  animation_engine.md  brain.md  calendar_manager.md  chat_window.md  config_manager.md  hotkey_listener.md  main.md  memory_store.md  notification_router.md  proactive_engine.md  settings_window.md  system_monitor.md  task_runner.md  tray_manager.md  tts_manager.md  ui_manager.md  voice_listener.md
docs/: CREATE_CHARACTER.md  KIBO_v5_PLAN.md
frontend/: electron.vite.config.ts  index.html  package-lock.json  package.json  tsconfig.json  vite-env.d.ts
kibo_core/: Cargo.toml  pyproject.toml
packaging/: README.md  backend_entry.py
scripts/: download_assets.py  preprocess_alpha.py  profile_latency.py
tests/: conftest.py  test_ai_client.py  test_animation_engine.py  test_api_main.py  test_brain.py  test_calendar_manager.py  (+24 more)
(+132 files in other folders)
