[project]
name = "kibo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # API server
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    # System
    "psutil>=5.9.0",
    "httpx>=0.27.0",
    "keyboard>=0.13.5",
    "pygetwindow>=0.0.9",
    # AI / LLM
    "groq>=0.11.0",
    # TTS fallback (always available)
    "pyttsx3>=2.90",
    # Voice listener — top-level imports, required even when voice is unused
    "numpy>=1.26.0",
    "sounddevice>=0.4.6",
    # Image processing (clip mode)
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0.0",
    "piper-tts>=1.2.0",
]
memory = [
    "sqlite-vec>=0.1.9",
    "fastembed>=0.3.0",
]
calendar = [
    "google-auth-oauthlib>=1.2.0",
    "google-api-python-client>=2.115.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
